--- a/galaxy.html
+++ b/galaxy.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>CaptainBlinds | Galaxy Curtains (Vertical Zebra Curtains)</title>
+    <title>CaptainBlinds | Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes)</title>
 
     <!-- Primary SEO Meta Tags -->
-    <meta name="description" content="Galaxy Curtains (Vertical Zebra Curtains) from CaptainBlinds are a modern solution for large windows and doors. Custom-made vertical zebra curtains with precise light and heat control, UV protection, durability and easy maintenance for homes and workplaces in Toronto &amp; the GTA.">
+    <meta name="description" content="Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes) from CaptainBlinds are a modern solution for large windows and doors. Custom-made vertical zebra curtains with precise light and heat control, UV protection, durability and easy maintenance for homes and workplaces in Toronto &amp; the GTA.">
     <meta name="keywords" content="galaxy curtains, vertical zebra curtains, custom curtains Toronto, vertical blinds, large window curtains, patio door curtains, UV protection curtains, modern window coverings GTA">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Galaxy Curtains (Vertical Zebra Curtains)">
-    <meta property="og:description" content="Modern, custom-made Galaxy Curtains (Vertical Zebra Curtains) that offer precise control of sunlight, privacy and heat for large windows and doors.">
+    <meta property="og:title" content="CaptainBlinds | Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes)">
+    <meta property="og:description" content="Modern, custom-made Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes) that offer precise control of sunlight, privacy and heat for large windows and doors.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Galaxy Curtains (Vertical Zebra Curtains)">
-    <meta name="twitter:description" content="Vertical Zebra Curtains with a sleek, modern look, ideal for large windows and sliding doors. Custom-made and professionally installed in Toronto &amp; the GTA.">
+    <meta name="twitter:title" content="CaptainBlinds | Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes)">
+    <meta name="twitter:description" content="Vertical Zebra Curtains &amp; Drapes with a sleek, modern look, ideal for large windows and sliding doors. Custom-made and professionally installed in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Canonical -->
@@ -115,9 +115,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -211,14 +211,14 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>Galaxy Curtains</h1>
+                        <h1>Galaxy Curtains &amp; Drapes</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index.html">Home</a></li>
                         <li class="shape"></li>
                         <li>Product</li>
                         <li class="shape"></li>
-                        <li>Galaxy Curtains</li>
+                        <li>Galaxy Curtains &amp; Drapes</li>
                     </ul>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <h5><a href="curtains.html">Curtains &amp; Drapes</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -264,7 +264,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <h5><a href="rods.html">Curtains &amp; Drapes Rod Type</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -347,24 +347,24 @@
                         <div class="service-details-content">
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/galaxy.jpg" alt="Galaxy Curtains (Vertical Zebra Curtains) installed on large windows">
+                                    <img src="assets/images/galaxy.jpg" alt="Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes) installed on large windows">
                                 </figure>
                                 <div class="text">
-                                    <h2>Galaxy Curtains (Vertical Zebra Curtains)</h2>
-                                    <p>Galaxy Curtains, also known as Vertical Zebra Curtains, are a frequently preferred model in both homes and workplaces. With their vertical fabric bands and clean lines, they fit beautifully into modern interiors and help create a stylish, contemporary look.</p>
+                                    <h2>Galaxy Curtains &amp; Drapes (Vertical Zebra Curtains &amp; Drapes)</h2>
+                                    <p>Galaxy Curtains &amp; Drapes, also known as Vertical Zebra Curtains &amp; Drapes, are a frequently preferred model in both homes and workplaces. With their vertical fabric bands and clean lines, they fit beautifully into modern interiors and help create a stylish, contemporary look.</p>
                                     <p>These curtains are especially suitable for large windows and patio doors because they can be neatly collected to one side, both sides, or opened from the middle. The bands are carried on wagons that move along an aluminium rail, allowing you to draw the curtain to the right or left as needed. Using a simple chain control, the bands rotate around their own axis so you can adjust the angle of the light precisely.</p>
 
                                     <h2>Control Sunlight, Heat &amp; Privacy</h2>
-                                    <p>Vertical Zebra Curtains make it possible to benefit from daylight at the level and angle you want. By rotating the bands, you can reduce glare on screens, soften harsh sunlight or close the curtains for privacy and dimming. This flexibility allows you to control not only the brightness but also the heat entering the room, making your space more comfortable throughout the day.</p>
+                                    <p>Vertical Zebra Curtains &amp; Drapes make it possible to benefit from daylight at the level and angle you want. By rotating the bands, you can reduce glare on screens, soften harsh sunlight or close the curtains for privacy and dimming. This flexibility allows you to control not only the brightness but also the heat entering the room, making your space more comfortable throughout the day.</p>
 
                                     <h2>Durable &amp; Easy to Maintain</h2>
-                                    <p>Galaxy Curtains are designed to be long-lasting and resistant to everyday impacts and use. The mechanism allows the system to be opened, collected and closed smoothly, while the cord or chain enables you to set the sun’s angle exactly as you prefer. The fabrics are chosen for their resistance to ageing, and cleaning is practical and straightforward, which makes these curtains a smart choice for busy homes and workplaces.</p>
+                                    <p>Galaxy Curtains &amp; Drapes are designed to be long-lasting and resistant to everyday impacts and use. The mechanism allows the system to be opened, collected and closed smoothly, while the cord or chain enables you to set the sun’s angle exactly as you prefer. The fabrics are chosen for their resistance to ageing, and cleaning is practical and straightforward, which makes these curtains a smart choice for busy homes and workplaces.</p>
 
                                     <h2>Custom-Made to Fit Your Windows</h2>
-                                    <p>Our Vertical Zebra Curtains are produced using high-quality polyester and metallic yarns. Each set is fully customized to the dimensions of your windows: we measure your windows, manufacture the curtains according to those measurements, and then professionally install them for a perfect, level finish. When placing your order, you can choose the colour, fabric and configuration that best suits your décor and functional needs.</p>
+                                    <p>Our Vertical Zebra Curtains &amp; Drapes are produced using high-quality polyester and metallic yarns. Each set is fully customized to the dimensions of your windows: we measure your windows, manufacture the curtains according to those measurements, and then professionally install them for a perfect, level finish. When placing your order, you can choose the colour, fabric and configuration that best suits your décor and functional needs.</p>
 
                                     <h2>UV Protection for Your Interior</h2>
-                                    <p>Galaxy Curtains help protect your floors, furniture and décor from the damage caused by prolonged sun exposure. When the bands are fully closed, they can block up to 99.9% of harmful UV rays, helping preserve the look and life of your interior while still giving you control over privacy and comfort.</p>
+                                    <p>Galaxy Curtains &amp; Drapes help protect your floors, furniture and décor from the damage caused by prolonged sun exposure. When the bands are fully closed, they can block up to 99.9% of harmful UV rays, helping preserve the look and life of your interior while still giving you control over privacy and comfort.</p>
                                 </div>
                             </div>
                             <div class="two-column">
@@ -389,8 +389,8 @@
                             </div>
                             <div class="content-two">
                                 <div class="text">
-                                    <h2>How to Order Galaxy Curtains</h2>
-                                    <p>Ordering Galaxy Curtains from CaptainBlinds is very simple. Call us, send a message or fill out the quote form and tell us about your windows and rooms. We will arrange a free, no-obligation consultation to visit your home or workplace, show you fabric samples, discuss colours and openness levels, and take precise measurements before your curtains are manufactured.</p>
+                                    <h2>How to Order Galaxy Curtains &amp; Drapes</h2>
+                                    <p>Ordering Galaxy Curtains &amp; Drapes from CaptainBlinds is very simple. Call us, send a message or fill out the quote form and tell us about your windows and rooms. We will arrange a free, no-obligation consultation to visit your home or workplace, show you fabric samples, discuss colours and openness levels, and take precise measurements before your curtains are manufactured.</p>
                                 </div>
                                 <div class="content_block_1">
                                     <div class="content-box">
@@ -403,7 +403,7 @@
                                                     <li>Choose fabric, colour and band style that match your décor</li>
                                                     <li>Decide how the curtains should stack and which way they should open</li>
                                                     <li>We measure each window accurately on-site</li>
-                                                    <li>Galaxy Curtains are custom-made to your exact dimensions</li>
+                                                    <li>Galaxy Curtains &amp; Drapes are custom-made to your exact dimensions</li>
                                                     <li>Professional installation ensures a clean, level and smooth-running finish</li>
                                                 </ul>
                                             </div>
@@ -412,7 +412,7 @@
                                 </div>
                                 <div class="text">
                                     <h2>Delivery &amp; Fitting Guide</h2>
-                                    <p>After your fabric and configuration choices are confirmed, your Galaxy Curtains are produced to size and prepared for installation. Once they are ready, our team returns to fit the rails and bands, check the movement and light adjustment, and make any final tweaks so everything operates smoothly and stacks neatly.</p>
+                                    <p>After your fabric and configuration choices are confirmed, your Galaxy Curtains &amp; Drapes are produced to size and prepared for installation. Once they are ready, our team returns to fit the rails and bands, check the movement and light adjustment, and make any final tweaks so everything operates smoothly and stacks neatly.</p>
                                     <p>For more information about production times, measuring or installation, or to book your free consultation, call us at <a href="tel:+14169853839">(416)985-3839</a> or reach us through our contact form.</p>
                                 </div>
                             </div>
@@ -456,7 +456,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -475,9 +475,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
