--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>CaptainBlinds | Custom Blinds, Shades & Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</title>
+    <title>CaptainBlinds | Custom Blinds, Shades & Curtains &amp; Drapes in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</title>
 
     <!-- Primary SEO Meta Tags -->
     <meta name="description" content="CaptainBlinds provides custom blinds, shades and curtains in Toronto &amp; the GTA. Free in-home consultation, expert measuring, professional installation and factory-direct pricing.">
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
+    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains &amp; Drapes in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta property="og:description" content="Free in-home consultation, precise measuring and professional installation for custom blinds, shades and curtains in Toronto &amp; the GTA.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
+    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains &amp; Drapes in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta name="twitter:description" content="Custom blinds, shades and curtains with free in-home consultation in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
@@ -124,9 +124,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -240,7 +240,7 @@
                 <div class="slide-item">
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-3.jpg)"></div>
                     <div class="content-box">
-                        <h1>Elegant Curtains & Sheers</h1>
+                        <h1>Elegant Curtains &amp; Drapes & Sheers</h1>
                         <div class="text">
                             <p>Beautiful fabrics tailored to your style.</p>
                             <div class="line"></div>
@@ -315,7 +315,7 @@
                             <div class="inner-box">
                                 <div class="icon-box"><i class="icon-icon1"></i></div>
                                 <div class="shape"></div>
-                                <h2>Curtains</h2>
+                                <h2>Curtains &amp; Drapes</h2>
                             </div>
                         </div>
                     </div>
@@ -338,7 +338,7 @@
         <section id="products" class="service-section">
             <div class="title-text">
                 <span class="text text-1 wow slideInRight animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">Blinds</span>
-                <span class="text text-2 wow slideInLeft animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">Curtains</span>
+                <span class="text text-2 wow slideInLeft animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">Curtains &amp; Drapes</span>
             </div>
             <div class="auto-container">
                 <div class="sec-title centred">
@@ -355,7 +355,7 @@
                                     <a href="assets/images/service/service-10.jpg" class="lightbox-image">+</a>
                                 </figure>
                                 <div class="lower-content">
-                                    <h3><a href="galaxy.html">Galaxy Curtains</a></h3>
+                                    <h3><a href="galaxy.html">Galaxy Curtains &amp; Drapes</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -606,8 +606,8 @@
                                 </figure>
                                 <div class="lower-content">
                                     <div class="inner">
-                                        <span class="category">Shutters, Curtains</span>
-                                        <h5><a href="index.html">Classic Top Up Light Filtering Curtains</a></h5>
+                                        <span class="category">Shutters, Curtains &amp; Drapes</span>
+                                        <h5><a href="index.html">Classic Top Up Light Filtering Curtains &amp; Drapes</a></h5>
                                         <figure class="designe-image"><img src="assets/images/resource/designe-1.png" alt=""></figure>
                                     </div>
                                     <h3>$58.99</h3>
@@ -624,7 +624,7 @@
                                 </figure>
                                 <div class="lower-content">
                                     <div class="inner">
-                                        <span class="category">Wood Curtains</span>
+                                        <span class="category">Wood Curtains &amp; Drapes</span>
                                         <h5><a href="index.html">The Designer Series Wovens Blinds</a></h5>
                                         <figure class="designe-image"><img src="assets/images/resource/designe-2.png" alt=""></figure>
                                     </div>
@@ -1212,7 +1212,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -1231,9 +1231,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
