--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
+    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains &amp; Drapes in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta property="og:description" content="Free in-home consultation, precise measuring and professional installation for custom blinds, shades and curtains in Toronto &amp; the GTA.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
+    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains &amp; Drapes in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta name="twitter:description" content="Custom blinds, shades and curtains with free in-home consultation in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
@@ -115,9 +115,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -329,7 +329,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -348,9 +348,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
