--- a/curtains.html
+++ b/curtains.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>CaptainBlinds | Curtains</title>
+    <title>CaptainBlinds | Curtains &amp; Drapes</title>
 
     <!-- Primary SEO Meta Tags -->
     <meta name="description" content="Custom curtains and drapery made to measure with premium fabrics, lining options, and professional installation across Toronto &amp; the GTA.">
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Curtains">
+    <meta property="og:title" content="CaptainBlinds | Curtains &amp; Drapes">
     <meta property="og:description" content="Tailored curtains and drapery with fabric, lining, and hardware options for beautiful light control and privacy.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Curtains">
+    <meta name="twitter:title" content="CaptainBlinds | Curtains &amp; Drapes">
     <meta name="twitter:description" content="Custom curtains and drapery with premium fabrics, light control, and expert installation in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
@@ -115,9 +115,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -210,14 +210,14 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>Curtains</h1>
+                        <h1>Curtains &amp; Drapes</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index.html">Home</a></li>
                         <li class="shape"></li>
                         <li>Product</li>
                         <li class="shape"></li>
-                        <li>Curtains</li>
+                        <li>Curtains &amp; Drapes</li>
                     </ul>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li class="active">
-                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <h5><a href="curtains.html">Curtains &amp; Drapes</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -264,7 +264,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <h5><a href="rods.html">Curtains &amp; Drapes Rod Type</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -352,7 +352,7 @@
                                     <img src="assets/images/gallery/curtains/1.jpg" alt="Custom curtains styled for a bright living room" style="width: 800px; height: 400px; object-fit: cover; object-position: center;">
                                 </figure>
                                 <div class="text">
-                                    <h2>Custom Curtains &amp; Drapery</h2>
+                                    <h2>Custom Curtains &amp; Drapes &amp; Drapery</h2>
                                     <p>Custom curtains add softness, warmth, and tailored style to any room. We create full-length drapery, sheers, and blackout panels to your exact measurements with fabrics that fit your décor.</p>
                                     <p>Choose light-filtering sheers for an airy daytime glow, lined drapery for added privacy, or blackout options for bedrooms and media rooms. Our team measures, fabricates, and installs across Toronto &amp; the GTA.</p>
 
@@ -390,7 +390,7 @@
                             <!-- Ordering / benefits / fitting -->
                             <div class="content-two">
                                 <div class="text">
-                                    <h2>How to Choose Your Curtains</h2>
+                                    <h2>How to Choose Your Curtains &amp; Drapes</h2>
                                     <p>We’ll help you select fabrics, linings, and hardware that match your room and lifestyle. During a free in-home consultation, we review light needs, privacy goals, and décor so your curtains look beautiful and work perfectly.</p>
                                 </div>
                                 <div class="content_block_1">
@@ -457,7 +457,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -477,9 +477,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
