--- a/error.html
+++ b/error.html
@@ -364,16 +364,16 @@
                             <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget links-widget ml-100">
                                     <div class="widget-title">
-                                        <h3>Curtains</h3>
+                                        <h3>Curtains &amp; Drapes</h3>
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">
-                                            <li><a href="index.html">Bedroom Curtains</a></li>
-                                            <li><a href="index.html">Sheer Curtains</a></li>
-                                            <li><a href="index.html">Office Curtains</a></li>
-                                            <li><a href="index.html">Blackout Curtains</a></li>
-                                            <li><a href="index.html">Economical Curtains</a></li>
+                                            <li><a href="index.html">Bedroom Curtains &amp; Drapes</a></li>
+                                            <li><a href="index.html">Sheer Curtains &amp; Drapes</a></li>
+                                            <li><a href="index.html">Office Curtains &amp; Drapes</a></li>
+                                            <li><a href="index.html">Blackout Curtains &amp; Drapes</a></li>
+                                            <li><a href="index.html">Economical Curtains &amp; Drapes</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -390,9 +390,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                             <li><a href="dual_blackout.html">Dual Shades</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
