--- a/rods.html
+++ b/rods.html
@@ -115,9 +115,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -445,7 +445,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -464,9 +464,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
