--- a/roller_blinds.html
+++ b/roller_blinds.html
@@ -115,9 +115,9 @@
         <li><a href="roller_blinds.html">Roller Shades</a></li>
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-        <li><a href="curtains.html">Curtains</a></li>
+        <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
         <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains Rod Type</a></li>
+        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -256,7 +256,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="curtains.html">Curtains</a></h5>
+                                            <h5><a href="curtains.html">Curtains &amp; Drapes</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -264,7 +264,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
+                                            <h5><a href="rods.html">Curtains &amp; Drapes Rod Type</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -458,7 +458,7 @@
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Products</a></li>
-                                            <li><a href="index.html">Curtains</a></li>
+                                            <li><a href="index.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
                                         </ul>
@@ -477,9 +477,9 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
-                                            <li><a href="curtains.html">Curtains</a></li>
+                                            <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
                                             <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains Rod Type</a></li>
+                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
